--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,8 @@
 .main-wrapper {
     padding: 25px 0;
     background-color: #f5f5f5;
-    border-radius: 5px;
+    border-radius: 0 0 5px 5px;
+
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
 }
